<resources>
    <string name="app_name">Anonymity Chat</string>

    <string name="type_your_message">Type a message</string>
    <string name="NoRecent">No recent</string>
    <string name="MainView">Main Menu</string>
    <string name="ChatsView">Chats</string>
    <string name="ContactsView">Contacts</string>

    <!--User status-->
    <string name="user_status_online">Online</string>
    <string name="user_status_away">Away</string>
    <string name="user_status_busy">Busy</string>
    <string name="user_status_invisible">Invisible</string>

    <!--This is used at the Tabbed Menu of the MainScreen-->
    <string name="action_settings">Settings</string>
    <string name="action_network">Network</string>

    <string name="vertical_ellipsis">&#8942;</string>
    <string name="main_screen_drawer_open">open</string>
    <string name="main_screen_drawer_close">close</string>


    <!--This is for Edit Contact Tab-->
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="left_arrow">&#xf060;</string>
    <string name="camera">&#xf030;</string>
    <string name="email">&#xf003;</string>
    <string name="check">&#xf00c;</string>
    <string name="clock">&#xf017;</string>

    <string name="circle">&#xf111;</string>
    <string name="plug">&#xf1e6;</string>


    <!--Settings-->
    <string name="settings_storage">Storage</string>
    <string name="settings_network">Network</string>
    <string name="settings_profile">My Profile</string>
    <string name="settings_about">About</string>

    <!--Main screen -->
    <string name="settings_chat_details">Chat Details</string>
    <string name="settings_chat_details_options">Options</string>
    <string name="trash">&#xf014;</string>
    <string name="settings_history_cleanup">History Cleanup:</string>
    <string name="spinner_arrow">never</string>
    <string name="time_unit">min</string>

    <!--Main screen -->
    <string name="drawer_menu_open">drawer menu open</string>
    <string name="drawer_menu_closed">drawer menu closed</string>

</resources>
