<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btn_main_menu"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/MainView"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_contacts_list"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ContactsView"
            android:textSize="16dp" />
        <Button
            android:id="@+id/btn_chats_list"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ChatsView"
            android:textSize="16dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="40dp"
        android:alpha="0.5"
        android:background="@color/colorGray"
        android:id="@+id/view" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:clipToPadding="false"
        android:divider="@drawable/chat_divider"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:scrollbarStyle="outsideOverlay"
        android:stackFromBottom="false"
        android:transcriptMode="normal"
        android:layout_below="@+id/view">


    </LinearLayout>
</RelativeLayout>