<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/chat_details_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--android:theme="@style/AppTheme.AppBarOverlay"-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">
            <!--app:popupTheme="@style/AppTheme.PopupOverlay">-->

            <TextView
                android:id="@+id/chat_details_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawablePadding="10dp"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/left_arrow"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/settings_chat_details"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chat_details_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawablePadding="10dp"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="Save"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chat_details_appBar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="NAME:"
                    android:textColor="@color/colorInfoText"
                    android:textColorHint="@color/colorInfoText"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/chat_details_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dip"
                    android:layout_marginTop="5dip"
                    android:hint="Chat Name"
                    android:textColor="@color/colorInfoText"
                    android:textColorHint="@color/colorInfoText"
                    android:textSize="20dip" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.1"
                    android:gravity="center_vertical"
                    android:src="@drawable/tor_onion" />

                <TextView
                    android:id="@+id/chat_details_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_weight="1"
                    android:hint="xxxxxxxxxxxxxxxx"
                    android:padding="10dip"
                    android:textColor="@color/colorInfoText"
                    android:textColorHint="@color/colorInfoText"
                    android:textSize="16dip" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/history_cleanup_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/chat_details_trash_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_weight="0.1"
                    android:text="@string/trash"
                    android:textSize="20sp" />

                <me.grantland.widget.AutofitTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_weight="0.5"
                    android:padding="10dip"
                    android:singleLine="true"
                    android:text="@string/settings_history_cleanup"
                    android:textColor="@color/colorInfoText"
                    android:textColorHint="@color/colorInfoText"
                    android:textSize="20dip" />

                <EditText
                    android:id="@+id/chat_details_history_cleanup_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical"
                    android:text="@string/spinner_arrow"
                    android:textColor="@color/colorInfoText"
                    android:textSize="20sp" />

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/chat_details_time_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="end"
                    android:paddingRight="20dp"
                    android:text="@string/time_unit"
                    android:textColor="@color/colorInfoText"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
